@@ -33,13 +33,8 @@
 
 # discourage address map swapping by setting Xms and Xmx to the same value
 # http://confluence.atlassian.com/display/DOC/Garbage+Collector+Performance+Issues
-export CATALINA_OPTS="$CATALINA_OPTS -Xms1024m"
+export CATALINA_OPTS="$CATALINA_OPTS -Xms256m"
 export CATALINA_OPTS="$CATALINA_OPTS -Xmx1024m"
-AUTHBIND=yes
-# Increase maximum perm size for web base applications to 4x the default amount
-# http://wiki.apache.org/tomcat/FAQ/Memoryhttp://wiki.apache.org/tomcat/FAQ/Memory
-export CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256m"
-# export CATALINA_OPTS="$CATALINA_OPTS -XX:PermSize=256m"
 
 # Reset the default stack size for threads to a lower value (by 1/10th original)
 # By default this can be anywhere between 512k -> 1024k depending on x32 or x64
@@ -101,4 +96,3 @@ echo ""
 
 LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/apr/lib
 export LD_LIBRARY_PATH
-
